--- a/duman-cpms/src/app/check-account/check-account.dialog.html
+++ b/duman-cpms/src/app/check-account/check-account.dialog.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content *ngIf="data.type == AccountDialogType.Create || data.type == AccountDialogType.Edit" style="display:flex; flex-direction:column;">
     <h2>{{data.text}}</h2>
-    <!-- <mat-form-field appearance="standard">
+    <mat-form-field appearance="standard">
         <mat-label>Firma Adı</mat-label>
         <input matInput [formControl]="firmaAdi" [value]="firmaAdi.value" spellcheck="false"/>
         <mat-error *ngIf="firmaAdi.invalid">Firma adı giriniz.</mat-error>
@@ -20,18 +20,18 @@
     <mat-form-field appearance="standard">
         <mat-label>Doğum Yeri</mat-label>
         <input matInput [formControl]="dyeri" [value]="dyeri.value"/>
-    </mat-form-field> -->
+    </mat-form-field>
     <mat-form-field appearance="standard">
         <mat-label>İl</mat-label>
-        <mat-select [formControl]="city" [(value)]="city.value">
+        <mat-select [formControl]="city" [(value)]="city.value" (selectionChange)="cityOnSelectionChange($event)">
             <mat-option *ngFor="let city_ of AppState.cities" [value]="city_">{{city_}}</mat-option>
         </mat-select>
         <mat-error *ngIf="city.invalid">İl seçiniz.</mat-error>
     </mat-form-field>
     <mat-form-field appearance="standard">
         <mat-label>İlçe</mat-label>
-        <mat-select [formControl]="district" [value]="district.value">
-            <mat-option *ngFor="let district_ of districts">{{district_}}</mat-option>
+        <mat-select [formControl]="district" [(value)]="district.value">
+            <mat-option *ngFor="let district_ of districts" [value]="district_">{{district_}}</mat-option>
         </mat-select>
         <mat-error *ngIf="city.invalid">İlçe seçiniz.</mat-error>
     </mat-form-field>
